...
              child: _halaman < 2
                  ? GestureDetector(
                      behavior: HitTestBehavior.opaque,
                      onTap: _keLogin,
                      child: Padding(
                        padding: const EdgeInsets.all(8),
                        child: Text('Lewati',
                            style: GoogleFonts.montserrat(
                                fontSize: 14,
                                fontWeight: FontWeight.w600,
                                color: TkColors.textMuted)),
                      ),
                    )
...
